...
            onCloseClicked = {
                onCloseClicked.invoke()
            }
        )
        FormInput(
            modifier = Modifier
                .testTag("contentInput")
                .padding(16.dp)
                .fillMaxWidth()
                .constrainAs(input) {
                    top.linkTo(title.bottom)
                    start.linkTo(parent.start)
                },
...
