...
    <string name="undergraduate">Undergraduate</string>
    <string name="graduate">Graduate</string>
    <string name="phd">PhD</string>
    <string name="unknown_student_type">Unknown</string>

    <!-- Courses -->
    <string name= "courses_empty">No courses to show</string>

    <!-- Grades -->
    <string name= "grades_empty">There are no submissions to review at this time</string>
    <string name="edit_score_button">Update score</string>
    <string name="post_submission_link_button">Post submission link</string>
    <string name= "edit_score_label">New score</string>
...
