...
            fontSize = 16.sp
        )
        if (userType == UserType.FACULTY) {
            FloatingActionButton(
                onClick = onAddClicked,
                modifier = Modifier
                    .testTag("editContent")
                    .padding(16.dp)
                    .constrainAs(btnAdd) {
                        bottom.linkTo(parent.bottom)
                        end.linkTo(parent.end)
                    },
                containerColor = Color.Black,
...
